tests/bad/match_upon_path.lens
match upon e.bar.foo (
    "(?<bar>\d+)"
)
